syntax = "proto3";
option go_package = "./pb";

package protobuf;

service ThreadService {
    rpc CreatePost(CreatePostRequest) returns (Post) {};
    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {};
    rpc GetPostById(GetPostByIdRequest) returns (Post) {};
}

message Post {
    int32 id = 1;
    string text = 2;
    int32 user = 3;
}

message CreatePostRequest {
    string post = 1;
    int32 user = 2;
}

message GetPostsRequest {}

message GetPostsResponse {
    repeated Post posts = 1;
}

message GetPostByIdRequest {
    int32 id = 1;
}